--- a/otel/docker-compose.yml
+++ b/otel/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.4'
+version: "3.4"
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.2.3
     container_name: elasticsearch
     environment:
       - node.name=elasticsearch
@@ -18,31 +18,42 @@ services:
     volumes:
       - data01:/usr/share/elasticsearch/data
     networks:
-      - elk
+      - telemetry
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.9.0
+    image: docker.elastic.co/kibana/kibana:8.2.3
+    container_name: kibana
     ports:
       - 5602:5601
     depends_on:
       - elasticsearch
     networks:
-      - elk
+      - telemetry
   apm:
-    image: docker.elastic.co/apm/apm-server:7.9.0
+    image: docker.elastic.co/apm/apm-server:8.2.3
+    container_name: apm
     ports:
       - 8200:8200
     depends_on:
       - elasticsearch
     volumes:
-      - ./apm-server.yml:/usr/share/apm-server/apm-server.yml
+      - ./elastic-apm-server.yml:/usr/share/apm-server/apm-server.yml
     networks:
-      - elk
+      - telemetry
+
+  otel-agent:
+    image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib:0.53.0
+    container_name: otel-agent
+    ports:
+      - 4317:4317
+    networks:
+      - telemetry
+
 volumes:
   data01:
     driver: local
   data02:
     driver: local
 networks:
-  elk:
+  telemetry:
     driver: bridge
     external: true
